Update README, project.clj