@@ -1,5 +1,5 @@
 (defproject vortext "0.1.0-SNAPSHOT"
-  :description "A vortext instance for Evidence Based Medicine"
+  :description "A visualizer for predictions"
   :license {:name "GNU General Public License (GPL) v3"
             :url "https://www.gnu.org/copyleft/gpl.html"}
   :url "https://github.com/joelkuiper/vortext"
@@ -14,7 +14,6 @@
 
         :port 8888
         :dev true}
-  :javac-options ["-target" "1.8" "-source" "1.8" "-Xlint:deprecation"]
   :dependencies [[org.clojure/clojure "1.6.0"]
                  [org.clojure/core.async "0.1.303.0-886421-alpha"]
                  [org.clojure/tools.cli "0.3.1"]
@@ -37,21 +36,17 @@
 
                  [prismatic/plumbing "0.4.3"]
 
-                 [potemkin "0.3.13"]
-                 [primitive-math "0.1.4"]
-                 [commons-codec/commons-codec "1.10"]
-
                  ;; serialization libraries
                  [cheshire "5.4.0"]
 
                  ;; ZeroMQ
+                 [org.zeromq/cljzmq "0.1.4" :exclusions [org.zeromq/jzmq]]
+                 [org.zeromq/jeromq "0.3.4"]]
 
-                 [org.zeromq/cljzmq "0.1.4" :exclusions [org.zeromq/jzmq]]]
-  :profiles {:dev {:dependencies [[org.zeromq/jeromq "0.3.4"]]}
-             :production {:dependencies [[org.zeromq/jzmq "3.1.0"]]
-                          :jvm-opts ["-server"
-                                     "-XX:+AggressiveOpts"
-                                     "-XX:+UseG1GC"
-                                     "-Djava.library.path=/usr/lib:/usr/local/lib"]
-                          :env {:dev false}}
-             :uberjar {:aot :all}})
+  :uberjar-name "vortext-demo.jar"
+  :profiles {:production {:env {:dev false}}
+             :uberjar {:omit-source true
+                       :env {:dev false
+                             :production true}
+
+                       :aot :all}})
